--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.bankczasu">
+    package="pl.denislewandowski.bankczasu">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -11,17 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_bankczasu_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="pl.denislewandowski.bankczasu.LoginActivity">
+        <activity android:name="pl.denislewandowski.bankczasu.activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="pl.denislewandowski.bankczasu.MainActivity"
+            android:name="pl.denislewandowski.bankczasu.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="pl.denislewandowski.bankczasu.SignUpActivity"></activity>
+        <activity android:name="pl.denislewandowski.bankczasu.activities.SignUpActivity"></activity>
     </application>
 
 </manifest>
