--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,15 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test:rules:1.1.0'
     implementation 'com.google.firebase:firebase-core:16.0.5'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'org.mockito:mockito-core:2.23.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
