--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="pl.denislewandowski.bankczasu">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,8 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_bankczasu_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="pl.denislewandowski.bankczasu.activities.LoginActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name="pl.denislewandowski.bankczasu.activities.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,7 +25,10 @@
         <activity
             android:name="pl.denislewandowski.bankczasu.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="pl.denislewandowski.bankczasu.activities.SignUpActivity"></activity>
+
+        <activity android:name="pl.denislewandowski.bankczasu.activities.SignUpActivity"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
